--- a/info.kv
+++ b/info.kv
@@ -195,6 +195,14 @@ WindowManager:
                     markup: True
                     size: self.texture_size
 
+                Label:
+                    id: login_label
+                    text: "Login ID : " + root.login_id()
+                    size_hint: (None, None)
+                    font_size: 30
+                    markup: True
+                    size: self.texture_size
+
 
 
             BoxLayout:
